# red_panda_robot

./: .gitignore  README.md
src/redpanda_base/: CMakeLists.txt  package.xml
src/redpanda_base/launch/: display.launch.py  gazebo.launch.py  test_gazebo.launch.py
src/redpanda_base/meshes/: back_link.STL  base_link.STL  casterback_link.STL  casterfront_link.STL  front_link.STL  left_link.STL  lidar_link.STL  right_link.STL
src/redpanda_base/urdf/: redpanda_base.csv  redpanda_base.urdf.xacro
