<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redpanda_base</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for redpanda_base</p>
    <p>This package contains configuration data, 3D models and launch files
for redpanda_base robot</p>
  </description>
  <maintainer email="nguyennhattung1@gmail.com">naiscorp</maintainer>
  <license>TODO: License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>  
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Orbbec camera dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>ros_package_format</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>